# family-budget

./: .gitignore  docker-compose.yml
.github/workflows/: build-and-push.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 067d190a6426_add_category_id_to_annual_envelopes.py  25066d223828_add_split_rules_table.py  383ef9417664_add_initial_balance_to_envelopes.py  3f4e1add013d_initial_schema.py  4d7ce2673b79_fix_nullable_columns.py  7a5cb3d1f00f_add_amount_and_direction_filters_to_.py  cc1bd24d709a_add_transfer_target_to_transactions.py
backend/app/: config.py  database.py  main.py
backend/app/api/: categories_routes.py  dashboard_routes.py  envelope_routes.py  import_routes.py  transaction_routes.py
backend/app/models/: __init__.py  base.py
backend/app/parsers/: camt053.py  viseca_pdf.py
backend/app/services/: actual_budget_migration.py  categorization.py  envelope_service.py  import_service.py  reconciliation.py
backend/tests/: test_categorization.py  test_import.py  test_parsers.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: hooks.ts  types.ts  utils.ts
frontend/src/pages/: CategoriesPage.tsx  DashboardPage.tsx  EnvelopesPage.tsx  ImportPage.tsx  RulesPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
